# token-sec-calc

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test1.sh
.github/workflows/: ci.yml
src/benchmark/: __init__.py  cli.py  client.py  matrix.py  prompts.py  questions.json  records.py  runner.py  stats.py  summary.py  tokenizer.py
tests/: test_benchmark_request.py  test_ci_workflow.py  test_hygiene.py  test_matrix.py  test_open_loop.py  test_output_log.py  test_percentile.py  test_prompt_length.py  test_questions.py  test_streaming.py  test_tokenizer.py
