[project]
name = "token-sec-calc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
benchmark = "benchmark.cli:main"

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Defaults plus import sort + bugbear. Tighter rule sets (UP, SIM, RUF) flag
# stylistic modernization that doesn't change behavior; opt in ad-hoc with
# `ruff check --select UP` when refactoring.
extend-select = ["I", "B"]
ignore = [
  "E501",   # line length — kept off; long format strings are common here.
  "B905",   # zip(strict=...) — covered by invariants where used.
  "E731",   # lambda assignment — fine for tiny formatters in print code.
]
